--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -8,8 +8,8 @@ html,
 body {
   margin: 0;
   // ADD FONT HERE - add $main-font in front of Verdana to enable custom fonts
-  // font-family: $main-font;
-  font-family: Verdana; // variables defined in './branding/typography'
+  font-family: Mullish;
+  // font-family: 'Mullish'; // variables defined in './branding/typography'
   // scroll-behavior: smooth;
 }
 
