--- a/styles/constants/_fontStyles.scss
+++ b/styles/constants/_fontStyles.scss
@@ -1,7 +1,6 @@
 
-// $font-names: (
-//     'FONT1_NAME': 'FONT1_STYLE',
-//     'FONT2_NAME': 'FONT2_STYLE',
-// );
+$font-list: (
+    // 'Mullish': 'Medium',
+);
 
-// $main-font: 'MAIN_FONT';
+$main-font: 'Mullish';
